# LVGL

./: .gitignore  CMakeLists.txt  README.md  shiqi_logo-2.c
LVGL1/: 项目说明.md
LVGL1/Drivers/BSP/24CXX/: 24cxx.c  24cxx.h
LVGL1/Drivers/BSP/IIC/: myiic.c  myiic.h
LVGL1/Drivers/BSP/KEY/: key.c  key.h
LVGL1/Drivers/BSP/LCD/: lcd.c  lcd.h  lcd_ex.c  lcdfont.h  ltdc.c  ltdc.h
LVGL1/Drivers/BSP/LED/: led.c  led.h
LVGL1/Drivers/BSP/MPU/: mpu.c  mpu.h
LVGL1/Drivers/BSP/NAND/: nand.c  nand.h
LVGL1/Drivers/BSP/SDRAM/: sdram.c  sdram.h
LVGL1/Drivers/BSP/TIMER/: btim.c  btim.h
LVGL1/Drivers/BSP/TOUCH/: ctiic.c  ctiic.h  ft5206.c  ft5206.h  gt9xxx.c  gt9xxx.h  touch.c  touch.h
LVGL1/Drivers/CMSIS/Device/ST/STM32F7xx/Source/Templates/arm/: startup_stm32f767xx.s
LVGL1/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.c
LVGL1/Drivers/SYSTEM/delay/: delay.c  delay.h
LVGL1/Drivers/SYSTEM/sys/: sys.c  sys.h
LVGL1/Drivers/SYSTEM/usart/: usart.c  usart.h
LVGL1/Middlewares/FATFS/src/: diskio.c  ffconf.h
LVGL1/Middlewares/LVGL/GUI/lvgl/: lv_conf.h
LVGL1/Middlewares/LVGL/GUI/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c
LVGL1/Middlewares/LVGL/GUI/lvgl/src/draw/: lv_draw_mask.c
LVGL1/Middlewares/LVGL/GUI/lvgl/src/font/: lv_font_simsun_16_cjk.c
LVGL1/Middlewares/LVGL/GUI_APP/: Font30.c
LVGL1/Middlewares/USMART/: usmart.c  usmart.h  usmart_config.c  usmart_port.c  usmart_port.h  usmart_str.c  usmart_str.h
LVGL1/Output/: 24cxx.crf  24cxx.d  app.crf  app.d  app_1.crf  app_1.d  atk_f767.build_log.htm  atk_f767.hex  atk_f767.htm  atk_f767.lnp  atk_f767.map  atk_f767_LVGL.dep  atk_f767_TOUCH.dep  btim.crf  btim.d  cc936.crf  cc936.d  comm_state.crf  comm_state.d  ctiic.crf  ctiic.d  dashboard.crf  dashboard.d  data_sim.crf  delay.crf  delay.d  diskio.crf  diskio.d  ff.crf  ff.d  font30.crf  font30.d  ft5206.crf  ft5206.d  ftl.crf  ftl.d  gifdec.crf  gifdec.d  gt9xxx.crf  gt9xxx.d  (+436 more)
LVGL1/Projects/MDK-ARM/: atk_f767.uvguix.Administrator  atk_f767.uvoptx  atk_f767.uvprojx
LVGL1/User/: lv_port_indev_template.c  lv_port_indev_template.h  main.c  stm32f7xx_hal_conf.h  stm32f7xx_it.c
LVGL1/User/app/: app.c  app.h  my_font_16.c  my_font_30.c  obuf.h
LVGL1/User/app/screens/: dashboard.c  dashboard.h
config/: lv_conf.h  lv_drv_conf.h
docs/: 项目文件作用报告.md
src/: main.c
src/app/: app.c  app.h  data_sim.c  data_sim.h  my_font_30.c  obuf.c  obuf.h
src/app/screens/: dashboard.c  dashboard.h
tools/: gen_test_data.py
